Added Cards On our Page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,37 @@
             </div>
         </div>
     </nav>
-    <main></main>
+
+
+    <main>
+        <div class="cards-container container flex" id="cards-container">
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://via.placeholder.com/400x200" alt="News-Image" srcset="">
+                </div>
+                <div class="card-content">
+                    <h3 id="news-title">This is the Title</h3>
+                    <h6 class="news-source" id="news-source">End Gadget 26/08/2023</h6>
+                    <p class="news-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, saepe!</p>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <template id="template-news-card">
+        <div class="card">
+            <div class="card-header">
+                <img src="https://via.placeholder.com/400x200" alt="News-Image" srcset="">
+            </div>
+            <div class="card-content">
+                <h3 id="news-title">This is the Title</h3>
+                <h6 class="news-source" id="news-source">End Gadget 26/08/2023</h6>
+                <p class="news-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, saepe!</p>
+            </div>
+        </div>
+    </template>
+
+
     <script src="script.js"></script>
 </body>
 </html>
