--- a/index.html
+++ b/index.html
@@ -2,26 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=name">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=name"> -->
     <title>News App</title>
     <link rel="stylesheet" href="style.css">
+    'x-api-key':i-VttzUBQcI_ugokLILxcix7DDki9oPUFO388MvYXZQ%27
 </head>
 <body>
     <nav>
         <div class="main-nav container flex">
-            <a href="#" class="company-logo">
+            <a href="#" class="company-logo" onclick="reload()">
                 <img src="./assets/worldwID.png" alt="" srcset="">
             </a>
             <div class="nav-links">
                 <ul class="flex">
-                    <li class="hover-link nav-item">IPL</li>
-                    <li class="hover-link nav-item">Finance</li>
-                    <li class="hover-link nav-item">Politics</li>
+                    <li class="hover-link nav-item"id="ipl" onclick="onNavItemClick('ipl')">IPL</li>
+                    <li class="hover-link nav-item" id="finance" onclick="onNavItemClick('finance')">Finance</li>
+                    <li class="hover-link nav-item" id="politics" onclick="onNavItemClick('politics')">Politics</li>
                 </ul>
             </div>
             <div class="search-bar flex">
-                <input type="text" class="news-input" placeholder="e.g. Science">
-                <button class="search-button">Search</button>
+                <input type="text" class="news-input" placeholder="e.g. Science" id="search-text">
+                <button class="search-button" id="search-button">Search</button>
             </div>
         </div>
     </nav>
@@ -29,28 +30,21 @@
 
     <main>
         <div class="cards-container container flex" id="cards-container">
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://via.placeholder.com/400x200" alt="News-Image" srcset="">
-                </div>
-                <div class="card-content">
-                    <h3 id="news-title">This is the Title</h3>
-                    <h6 class="news-source" id="news-source">End Gadget 26/08/2023</h6>
-                    <p class="news-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, saepe!</p>
-                </div>
-            </div>
+
         </div>
     </main>
+
+
 
     <template id="template-news-card">
         <div class="card">
             <div class="card-header">
-                <img src="https://via.placeholder.com/400x200" alt="News-Image" srcset="">
+                <img src="https://via.placeholder.com/400x200" alt="News-Image" id="news-img">
             </div>
             <div class="card-content">
                 <h3 id="news-title">This is the Title</h3>
                 <h6 class="news-source" id="news-source">End Gadget 26/08/2023</h6>
-                <p class="news-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, saepe!</p>
+                <p class="news-desc" id="news-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, saepe!</p>
             </div>
         </div>
     </template>
